[project]
name = "kimi-quant"
version = "0.1.0"
description = "BTC Perpetual Contract Quantitative Trading with Kimi K3 LLM"
readme = "README.md"
authors = [
    { name = "marvin", email = "1806309307@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "eth-account>=0.13.7",
    "hyperliquid-python-sdk>=0.24.0",
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
kimi-quant = "kimi_quant.main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
